--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
-MONGO_URI=<mongodb+srv://aneeketdaswani:Daswani123@cluster0.fbinh5s.mongodb.net/taskmanager?retryWrites=true&w=majority&appName=Cluster0>
+MONGO_URI=mongodb+srv://user1:Daswani123@cluster0.hhvl7hk.mongodb.net/taskmanager?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=2J8zqkP7VN6bxzg+Wy7DQZsd3Yx8mF3Bl0kch6HYtFs=
 PORT=5001
